apps/gakhalmo-back/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gakhalmo-back
  namespace: gakhalmo
spec:
  selector:
    app: gakhalmo-back
  ports:
    - name: http
      port: 8000
      targetPort: 8000
