apps/gakhalmo-back/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gakhalmo-back
  namespace: gakhalmo
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.gakhalmo.klr.kr
      secretName: api-gakhalmo-klr-kr-tls
  rules:
    - host: api.gakhalmo.klr.kr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gakhalmo-back
                port:
                  number: 8000
